--- a/package.json
+++ b/package.json
@@ -91,5 +91,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "homepage" : "http://christianjessmark.dk/markdown_previewer"
 }
